@@ -19,7 +19,7 @@ CONFIGURATION
     The options are set in the httpd.conf/.htaccess file using the syntax:
     PerlSetVar OptionName 'value'
 
-    Example: PerlSetVar GalleryCacheDir '/var/tmp/Apache-Gallery/'
+    Example: PerlSetVar GalleryCacheDir '/var/cache/www/'
 
     GalleryAutoRotate
         Some cameras, like the Canon G3, can detect the orientation of a the
@@ -32,10 +32,9 @@ CONFIGURATION
 
     GalleryCacheDir
         Directory where Apache::Gallery should create its cache with scaled
-        pictures. The default is /var/tmp/Apache-Gallery/ . Here, a
-        directory for each virtualhost or location will be created
-        automatically. Make sure your webserver has write access to the
-        CacheDir.
+        pictures. The default is /var/cache/www/ . Here, a directory for each
+        virtualhost or location will be created automatically. Make sure your
+        webserver has write access to the CacheDir.
 
     GalleryTemplateDir
         Full path to the directory where you placed the templates. This
